@@ -35,6 +35,7 @@ Other features
  * Render the Wagtail User Bar on non ``Page`` views (Caitlin White, Coen van der Kamp)
  * Add ability to define ``form_classname`` on ``ListBlock`` & ``StreamBlock`` (LB (Ben Johnston))
  * Add documentation about how to use ``Rustface`` for image feature detection (Neal Todd)
+ * Improve performance of public/not_public queries in ``PageQuerySet`` (Timothy Bautista)
 
 
 Bug fixes
