@@ -366,17 +366,18 @@ class TestPageQuerySet(TestCase):
         # Add PageViewRestriction to events_index
         PageViewRestriction.objects.create(page=events_index, password='hello')
 
-        # Get public pages
-        pages = Page.objects.public()
+        with self.assertNumQueries(4):
+            # Get public pages
+            pages = Page.objects.public()
 
-        # Check that the homepage is in the results
-        self.assertTrue(pages.filter(id=homepage.id).exists())
+            # Check that the homepage is in the results
+            self.assertTrue(pages.filter(id=homepage.id).exists())
 
-        # Check that the events index is not in the results
-        self.assertFalse(pages.filter(id=events_index.id).exists())
+            # Check that the events index is not in the results
+            self.assertFalse(pages.filter(id=events_index.id).exists())
 
-        # Check that the event is not in the results
-        self.assertFalse(pages.filter(id=event.id).exists())
+            # Check that the event is not in the results
+            self.assertFalse(pages.filter(id=event.id).exists())
 
     def test_not_public(self):
         events_index = Page.objects.get(url_path='/home/events/')
@@ -386,17 +387,18 @@ class TestPageQuerySet(TestCase):
         # Add PageViewRestriction to events_index
         PageViewRestriction.objects.create(page=events_index, password='hello')
 
-        # Get public pages
-        pages = Page.objects.not_public()
+        with self.assertNumQueries(4):
+            # Get public pages
+            pages = Page.objects.not_public()
 
-        # Check that the homepage is not in the results
-        self.assertFalse(pages.filter(id=homepage.id).exists())
+            # Check that the homepage is not in the results
+            self.assertFalse(pages.filter(id=homepage.id).exists())
 
-        # Check that the events index is in the results
-        self.assertTrue(pages.filter(id=events_index.id).exists())
+            # Check that the events index is in the results
+            self.assertTrue(pages.filter(id=events_index.id).exists())
 
-        # Check that the event is in the results
-        self.assertTrue(pages.filter(id=event.id).exists())
+            # Check that the event is in the results
+            self.assertTrue(pages.filter(id=event.id).exists())
 
     def test_merge_queries(self):
         type_q = Page.objects.type_q(EventPage)
